adicionando informações de contato na ong e arrumando gerador de dados
